--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #9a59b5;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.login-screen img {
+  height: 120px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login-screen {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.login-screen input {
+  height: 70px;
+  width: 400px;
+  padding: 20px;
+  border-radius: 10px;
+  border: none;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-screen button {
+  height: 70px;
+  width: 400px;
+  padding: 20px;
+  border-radius: 10px;
+  border: 1px solid #fff;
+  color: #fff;
+  font-size: 20px;
+  margin-bottom: 10px;
+  background: transparent;
+  cursor: pointer;
+}
+
+.login-screen button:hover {
+  background-color: #fff;
+  color: #000;
+  transition: ease-in-out 0.4s;
 }
