--- a/src/App.css
+++ b/src/App.css
@@ -84,15 +84,40 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 40px;
+  height: 35px;
   border: none;
   color: #fff;
   font-family: "Open Sans", sans-serif;
   text-transform: uppercase;
   padding-left: 5px;
   padding-right: 5px;
+  cursor: pointer;
 }
 
 .dashboard header button img {
   margin-right: 5px;
+}
+
+.dashboard h3 {
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
+  font-family: "Roboto", sans-serif;
+}
+
+.dashboard .account {
+  background-color: #956aaa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  border: none;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+  text-transform: uppercase;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-right: 10px;
+  cursor: pointer;
 }
