--- a/src/App.css
+++ b/src/App.css
@@ -135,11 +135,14 @@ body {
   border-radius: 7px;
 }
 
-.task {
+.task li {
   background-color: #fff;
   padding: 5px;
   border-radius: 7px;
   cursor: pointer;
+  list-style: none;
+  margin-top: 5px;
+  position: relative;
 }
 
 .task-board h5 {
@@ -168,7 +171,7 @@ body {
   display: flex;
 }
 
-.task-dashboard-wrapper button {
+.task-dashboard-wrapper .board-btn {
   height: 50px;
   width: 150px;
   background-color: #864b9b;
@@ -180,8 +183,19 @@ body {
   opacity: 0.8;
 }
 
-.task-dashboard-wrapper button:hover {
+.task-dashboard-wrapper .board-btn:hover {
   filter: brightness(90%);
   color: #fff;
   transition: ease-in-out 0.3s;
+}
+
+.x-button {
+  position: absolute;
+  right: 10px;
+  background: none;
+  border: none;
+  color: #b9b9b9;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
 }
