user can now remove todos, remove button only visible on hover

--- a/src/App.css
+++ b/src/App.css
@@ -198,4 +198,9 @@ body {
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
+  display: none;
+}
+
+.task li:hover .x-button {
+  display: block;
 }
