--- a/src/App.css
+++ b/src/App.css
@@ -219,3 +219,19 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+@media (min-width: 700px) {
+  .task-dashboard-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .add-a-board {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+  }
+}
