--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,13 @@ body {
   cursor: pointer;
 }
 
+@media (max-width: 420px) {
+  .login-screen button,
+  .login-screen input {
+    width: 300px;
+  }
+}
+
 .login-screen button:hover {
   background-color: #fff;
   color: #000;
@@ -158,6 +165,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 400px) {
+  .task-board {
+    width: 300px;
+  }
 }
 
 .task-dashboard-wrapper .board-btn {
