--- a/src/App.css
+++ b/src/App.css
@@ -152,8 +152,9 @@ body {
   font-size: 15px;
   font-family: "Roboto", sans-serif;
   padding: 3px;
-  width: 100%;
+  width: 90%;
   outline: none;
+  position: relative;
 }
 
 .task-board input:active {
@@ -248,4 +249,27 @@ body {
     flex-direction: column;
     margin-left: 10px;
   }
+}
+
+.task-add-btn {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  height: 20px;
+  width: 20px;
+  margin-top: 30px;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.task-add-btn img {
+  max-height: 20px;
+  width: 20px;
+}
+
+.task-add-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
